fix: fix z-index rewind

--- a/assets/css/video.css
+++ b/assets/css/video.css
@@ -55,7 +55,7 @@
   max-height: 8rem;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: -1;
   border-radius: 50%;
   font-size: 1rem;
   transform: translate(-50%, -50%);
